--- a/app/src/main/res/drawable/bordermain.xml
+++ b/app/src/main/res/drawable/bordermain.xml
@@ -2,25 +2,20 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_enabled="true" android:state_focused="true">
-       <shape android:shape="rectangle">
-           <solid android:color="@color/white"/>
-           <corners android:radius="23.40dp"></corners>
-           <stroke android:color="@color/black" android:width="1dp"/>
-
-       </shape>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/white"/>
+            <corners android:radius="23.40dp"/>
+            <stroke android:color="#2a364e" android:width="1dp"/>
+        </shape>
     </item>
 
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
-        <solid android:color="@color/white"/>
-        <corners android:radius="23.40dp"></corners>
-        <stroke android:color="@color/black" android:width="3dp"/>
+            <corners android:radius="15.40dp"/>
+            <solid android:color="@color/white"/>
+            <stroke android:color="@color/black" android:width="1dp"/>
         </shape>
-
-
     </item>
-
-
 
 
 </selector>
