--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,12 @@
     </style>
 
     <style name="Theme.ChartApplication" parent="Base.Theme.ChartApplication" />
+
+    <style name="dialoge">
+        <item name="android:windowBackground">@drawable/empty_back</item>
+        <item name="windowNoTitle">true</item>
+        <item name="windowMinWidthMajor">80%</item>
+        <item name ="windowActionBar">false</item>
+
+    </style>
 </resources>
